<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.handheld.huang.handsettest.activity.GpsTestActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/gps_test"/>

    <LinearLayout
        android:id="@+id/gps_ll_enter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_marginTop="@dimen/y20"
        android:background="#55ACEE"
        android:gravity="center">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/gps_btn_test"
            android:layout_width="@dimen/x280"
            android:layout_height="@dimen/y80"
            android:layout_gravity="center"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="2dp"
            fancy:fb_focusColor="#5474b8"
            fancy:fb_fontIconResource="&#xf083;"
            fancy:fb_fontIconSize="35dp"
            fancy:fb_ghost="true"
            fancy:fb_iconPaddingRight="@dimen/x40"
            fancy:fb_text="@string/start_gps_test"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_textSize="@dimen/x18"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gps_ll_confirm"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gps_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_test_confirm"
                android:textColor="@color/textColor"
                android:textSize="40sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gps_img_ok"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_ok_unselected"/>

                <ImageView
                    android:id="@+id/gps_img_cross"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginStart="@dimen/x50"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_cross_unselected"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/gps_tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/btn_bg"
            android:padding="@dimen/y30"
            android:text="@string/finish"
            android:textColor="@color/nextColor"
            android:textSize="42sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
