<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_ll_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_test_confirm"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/result_img_ok"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/display_test"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/check_ok_unselected"/>

            <ImageView
                android:id="@+id/result_img_cross"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/display_test"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/check_cross_unselected"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/result_tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/x15"
        android:text="@string/next"
        android:textColor="@color/nextColor"
        android:textSize="42sp"
        android:textStyle="bold"/>
</LinearLayout>