<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.handheld.huang.handsettest.activity.ElectricityTestActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/electricity_test"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onElectricity_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onElectricity_test_confirm"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/onElectricity_img_ok"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_ok_unselected"/>

                <ImageView
                    android:id="@+id/onElectricity_img_cross"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginStart="@dimen/x50"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_cross_unselected"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offElectricity_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offElectricity_test_confirm"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/offElectricity_img_ok"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_ok_unselected"/>

                <ImageView
                    android:id="@+id/offElectricity_img_cross"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginStart="@dimen/x50"
                    android:layout_marginTop="@dimen/y20"
                    android:contentDescription="@string/display_test"
                    android:padding="@dimen/x8"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_cross_unselected"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/result_tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/btn_bg"
            android:padding="@dimen/x30"
            android:text="@string/next"
            android:textColor="@color/nextColor"
            android:textSize="42sp"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
